# folio

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/: 01_quickstart.ipynb  02_multi_objective.ipynb  03_lab_workflow.ipynb  04_edge_cases.ipynb  05_polymer_optimization.ipynb  06_extending_folio.ipynb  09_iridium_sensor.ipynb  11_executors.ipynb  12_llm_initialization.ipynb  README.md
demos/07_polymer_optimization_quarto/: polymer_optimization.qmd
demos/08_experiment_report/: experiment_report.qmd  references.bib
demos/10_iridium_sensor_report/: iridium_sensor_report.qmd  references.bib
demos/extensions/: __init__.py  custom_models.py  r2_target.py
docs/: architecture.md
src/folio/: __init__.py  api.py  exceptions.py
src/folio/core/: __init__.py  config.py  database.py  observation.py  project.py  schema.py
src/folio/executors/: __init__.py  base.py  claude_light.py  human.py
src/folio/recommenders/: __init__.py  base.py  bayesian.py  random.py
src/folio/recommenders/acquisitions/: __init__.py  al_base.py  al_functions.py  base.py  functions.py  mobo_base.py  mobo_functions.py
src/folio/recommenders/initializer/: __init__.py  base.py  llm.py
src/folio/recommenders/initializer/prompts/: default.txt
src/folio/surrogates/: __init__.py  base.py  gp.py  multitask_gp.py  transforms.py
src/folio/targets/: __init__.py  base.py  builtin.py
tests/: conftest.py  test_acquisition_functions.py  test_acquisitions.py  test_api.py  test_surrogates.py  test_targets.py
tests/executors/: __init__.py  test_base.py  test_claude_light.py  test_human.py
tests/test_core/: test_database.py  test_observation.py  test_project.py  test_schema.py
tests/test_recommenders/: test_base.py  test_bayesian.py  test_random.py
tests/test_recommenders/test_acquisitions/: test_acquisition_functions.py  test_al_acquisition_functions.py  test_mobo_acquisition_functions.py
tests/test_recommenders/test_initializer/: __init__.py  conftest.py  test_base.py  test_llm.py
tests/test_surrogates/: test_base.py  test_gp.py  test_multitask_gp.py  test_transforms.py
