[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "folio"
version = "0.1.0"
description = "An open-source electronic lab notebook with intelligent experiment suggestions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kangping Liu", email = "kangpinl@andrew.cmu.edu" }
]
keywords = ["chemistry", "lab notebook", "bayesian optimization", "experiments"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "streamlit>=1.28",
    "pyyaml>=6.0",
    "botorch>=0.14",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "black>=23.0",
    "pre-commit>=3.0",
]
demos = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "nbconvert>=7.0",
    "tabulate>=0.9",
]

[project.urls]
Homepage = "https://github.com/Katsurado/folio"
Documentation = "https://github.com/Katsurado/folio#readme"
Repository = "https://github.com/Katsurado/folio"
Issues = "https://github.com/Katsurado/folio/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/folio"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
target-version = "py310"

[tool.ruff.isort]
known-first-party = ["folio"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff.lint]
# N802: Allow uppercase in function names (e.g., test_fit_1d_X)
# N803: Allow uppercase X for ML convention (feature matrices)
# N806: Allow uppercase variable names in functions
ignore = ["N802", "N803", "N806"]
